# obstacle_avoidance

./: .gitignore  README.md
src/ar_track/: CMakeLists.txt  package.xml
src/ar_track/calibration/: usb_cam.yaml
src/ar_track/launch/: ar_drive_info.launch  ar_viewer.launch
src/ar_track/nodes/: ar_drive.py  ar_info_print.py  ar_viewer.py
src/ar_track/rviz/: ar_viewer.rviz
src/control/: package.xml  setup.py
src/control/scripts/: longitudinal_pid_control.py
src/custom_msgs/object_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/object_msgs/msg/: Control.msg  DebugPrediction.msg  Object.msg  PlanningDebug.msg  Polygon.msg  PolygonArray.msg  Prediction.msg  Predictions.msg  Trajectory.msg  trajectory.msg  trajectory_array.msg
src/cv_agents/: CMakeLists.txt  package.xml
src/cv_agents/src/: spawn_agent.py
src/map_server/: CMakeLists.txt  package.xml
src/map_server/src/: map_coord_proto2.pkl  map_visualizer.py  ref_path.pkl  route.pkl  surface.pkl
src/model/: CMakeLists.txt  package.xml  setup.py
src/obstacles/: CMakeLists.txt  package.xml
src/obstacles/src/: collision_check_with_visualizing_car.py  obstacles.pkl  parking_car.py  separation_axis_theorem.py
src/pathfinding/: CMakeLists.txt  package.xml  reeds_shepp.py  setup.py
src/rviz_display/: CMakeLists.txt  package.xml  setup.py  test.rviz
src/rviz_display/launch/: test.launch
src/simul/: CMakeLists.txt  package.xml
src/simul/launch/: ppsimul.launch  stanleysimul.launch  test.launch
src/simul/nodes/: parking_car.py  ppsimul.py  (+2 more)
src/xycar_sim_parking/: CMakeLists.txt  package.xml
(+26 files in other folders)
